# HuaHuaDailyMCP

./: README.md  SKILL.md  pyproject.toml  server.py
.github/workflows/: sync.yml
